--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -1,3 +1,9 @@
+@article {Cassio14,
+	Author = {Cassio Batista and Thiago Coelho and Bruno Haick and Nelson Neto and Aldebaro Klautau},
+	Title = {{LaPS CSR: A Free Distributed Cloud Speech Recognition System}},
+	Journal = {Fiatal Müszakiak Tudományos Ülésszaka},
+	Year = {2014}
+}
 @misc{rc5_wiki,
 	note = {\url{http://en.wikipedia.org/wiki/RC-5}},
 	title = {{RC-5 Philips Procotol}},
