cassio: more erros fixed

--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -1,7 +1,7 @@
 @article {Cassio14,
 	Author = {Cassio Batista and Thiago Coelho and Bruno Haick and Nelson Neto and Aldebaro Klautau},
 	Title = {{LaPS CSR: A Free Distributed Cloud Speech Recognition System}},
-	Journal = {Fiatal Müszakiak Tudományos Ülésszaka},
+	Journal = {International Scientific Conference of Young Engineers ({FMTU})},
 	Year = {2014}
 }
 @misc{rc5_wiki,
@@ -33,14 +33,14 @@
 }
 
 @inproceedings{Sefat14,
-	author = {Md. Syadus Sefat {et. al}},
-	title = {Implementation of Vision Based Intelligen Home Automation and Security System},
+	author = {Md. Syadus Sefat and Abdllah Al Mamun Khan and Md. Shahjahan},
+	title = {Implementation of Vision Based Intelligent Home Automation and Security System},
 	publisher = {{IEEE}},
 	year = {2014}
 }
 
 @inproceedings{Barrena11,
-	author = {Stephanie Barrena {et. al}},
+	author = {Stephanie Barrena and Laura Klotz and Vanessa Landes and Alex Page and Ying Sun},
 	title = {Designing Android Applications with both Online and Offline Voice Control of Household Devices},
 	publisher = {{IEEE}},
 	year = {2011}
