--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -53,7 +53,7 @@
 \lstdefinestyle{code} {%
 	basicstyle=\ttfamily\footnotesize,
 	backgroundcolor=\color{blue!10},
-	escapeinside={@}{@},
+	%escapeinside={@}{@},
 	frame=single, 
 	captionpos=t,
 	upquote=false,
@@ -123,6 +123,45 @@ Abril/2015
 \newpage
 \tableofcontents
 \listoffigures
+
+%% Lista de Abreviaturas --------------------------------------------------------
+%\newpage
+%\begin{section}{Lista de Abreviaturas}
+%\begin{description}
+%	\item[AM] \textit{Acoustic Model}
+%	\item[ARPA] U.S. \textit{Department of Defense Advanced Research Project Agency}
+%	\item[ASR] \emph{Automatic Speech Recognition} 
+%	\item[API] \emph{Application Programming Interface}
+%	\item[BSD] \textit{Berkeley Software Distribution} 
+%	\item[CLI] \textit{Common Language Infrastructure} 
+%	\item[CLR] \textit{Common Language Runtime}
+%	\item[CNPq] Conselho Nacional de Desenvolvimento Científico e Tecnológico
+%	\item[FISL] Fórum Internacional de Software Livre
+%	\item[HMM] \textit{Hidden Markov Model}
+%	\item[HTK] \emph{Hidden Markov Model Toolkit}
+%	\item[IBGE] Instituto Brasileiro de Geografia Estatística
+%	\item[IEEE] \textit{Institute of Electrical and Electronics Engineers} 
+%	\item[IR] \textit{Infra Red}
+%	\item[JSAPI] \emph{Java Speech Programming Interface}
+%	\item[JSGF] \textit{Java Speech Grammar Format}
+%	\item[LM] \textit{Language Model}
+%	\item[LVCSR] \textit{Large Vocabulary Continuous Speech Recognition} 
+%	\item[MAP] \textit{Maximum A Posteriori} 
+%	\item[MFCC] \textit{Mel-Frequency Cepstral Coefficients} 
+%	\item[MLLR] \textit{Maximum Likelihood Linear Regression}
+%	\item[NLP] \textit{Natural Language Processing}
+%	\item[PT\_BR] Português Brasileiro 
+%	\item[xRT] \textit{Real-time factor} 
+%	\item[SAPI] \emph{Speech Application Programming Interface}
+%	\item[SDK] \textit{Software Development Kit} 
+%	\item[SR] \textit{Speech Recognition}
+%	\item[TTS] \textit{Text to Speech} 
+%	\item[UFPA] Universidade Federal do Pará 
+%	\item[URL] \textit{Unified Resource Locator} 
+%	\item[WER] \textit{Word Error Rate}
+%	\item[XML] \textit{Extensible Markup Language}
+%\end{description}
+%\end{section}
 
 % Introdução -------------------------------------------------------------------
 \newpage
