Adicionei referencias, criei subsection GPIO em metodologia, ajeitei tabela em rev_teorica, adicionei figuras

--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -4,7 +4,7 @@
 	Journal = {International Scientific Conference of Young Engineers ({FMTU})},
 	Year = {2014}
 }
-@misc{rc5_wiki,
+@misc{rc4_wiki,
 	note = {\url{http://en.wikipedia.org/wiki/RC-5}},
 	title = {{RC-5 Philips Procotol}},
 	year = {Visitado em Abril, 2015},
@@ -31,6 +31,24 @@
 	year = {Visitado em Abril, 2015},
 	url = {http://andicelabs.com/2014/03/usb-audio-beaglebone/}
 }
+
+%Datashhet do processador da BBB
+@manual{am335x,
+        organization = {Texas Instruments},
+	title = {AM335x ARM Cortex-A8 Microprocessors (MPU) Techinical Reference Manual},
+	year = {2012},
+	month = {11},
+	note = {Revised on April 2013}
+}
+
+%livro BBB1
+@book{expbbb,
+        title = {Exploring Beaglebone, Tools and Techiniques for Building with Embedded Linux},
+        pages = {600p},
+        year = {2014},
+        publisher = {Wiley}
+}
+
 
 @inproceedings{Sefat14,
 	author = {Md. Syadus Sefat and Abdllah Al Mamun Khan and Md. Shahjahan},
