cassio: apendice+gpio edit

--- a/tech_report/apendice.tex
+++ b/tech_report/apendice.tex
@@ -183,4 +183,25 @@ caption={Função {\tt sendCommand()}}, label={lst:ard_5}]
 \label{app:matlab}
 \lstinputlisting[style=code, language=matlab]{codes/myanalyze.m}
 \end{section}
+
+% Cassio -----------------------------------------------------------------------
+\newpage
+\begin{section}{C: RC-6 \textit{Handler}}
+\label{app:rc6}
+\lstinputlisting[style=code, language=c, firstline=57, lastline=67,
+caption={Declaração das funções}, label={lst:ir_0}]
+{codes/ir_pwm.c}
+
+\lstinputlisting[style=code, language=c, firstline=133, lastline=211,
+caption={Função \texttt{decode()}}, label={lst:ir_1}]
+{codes/ir_pwm.c}
+
+\lstinputlisting[style=code, language=c, firstline=220, lastline=278,
+caption={Função \texttt{send()}}, label={lst:ir_1}]
+{codes/ir_pwm.c}
+
+\lstinputlisting[style=code, language=c, firstline=281, lastline=323,
+caption={Função \texttt{receive()}}, label={lst:ir_1}]
+{codes/ir_pwm.c}
+\end{section}
 %%% EOF %%%
