--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -14,6 +14,7 @@
 \usepackage{lipsum}
 \usepackage{fancyhdr}
 \usepackage{listing}
+\usepackage{gensymb}
 
 %\renewcommand*{\refname}{Referências Bibliográficas}
 
