cassio: bibs added

--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -1,10 +1,35 @@
+@misc{nielsen04,
+	note = {\url{http://www.nngroup.com/articles/remote-control-anarchy/}},
+	title = {Remote Control Anarchy},
+	year = {Visitado em Abril, 2015},
+	url = {http://www.nngroup.com/articles/remote-control-anarchy/}
+}
+
+@book{Lee09, 
+	Author = {Akinobu LEE},   
+	Title = {The Julius Book},
+	Publisher = {1.0.3 ed. - rev 4.1.5}, 
+	Month = {May},
+	Year = {2010} 
+}
+
+@misc{ada,
+	author = {{United States Government}},
+	title = {Americans with Disabilities Act of 1990},
+	note = {Public Law 101-336, 104 Stat. 327},
+	month = {July},
+	url = {http://www.gpo.gov/},
+	year = {1990}
+}
+
 @article {Cassio14,
 	Author = {Cassio Batista and Thiago Coelho and Bruno Haick and Nelson Neto and Aldebaro Klautau},
 	Title = {{LaPS CSR: A Free Distributed Cloud Speech Recognition System}},
 	Journal = {International Scientific Conference of Young Engineers ({FMTU})},
 	Year = {2014}
 }
-@misc{rc4_wiki,
+
+@misc{rc5,
 	note = {\url{http://en.wikipedia.org/wiki/RC-5}},
 	title = {{RC-5 Philips Procotol}},
 	year = {Visitado em Abril, 2015},
@@ -34,8 +59,8 @@
 
 %Datashhet do processador da BBB
 @manual{am335x,
-        organization = {Texas Instruments},
-	title = {AM335x ARM Cortex-A8 Microprocessors (MPU) Techinical Reference Manual},
+	organization = {Texas Instruments},
+	title = {{AM335x ARM Cortex-A8 Microprocessors (MPU) Technical Reference Manual}},
 	year = {2012},
 	month = {11},
 	note = {Revised on April 2013}
@@ -43,10 +68,10 @@
 
 %livro BBB1
 @book{expbbb,
-        title = {Exploring Beaglebone, Tools and Techiniques for Building with Embedded Linux},
-        pages = {600p},
-        year = {2014},
-        publisher = {Wiley}
+	title = {Exploring BeagleBone, Tools and Techniques for Building with Embedded Linux},
+	pages = {600p},
+	year = {2014},
+	publisher = {Wiley}
 }
 
 
@@ -153,7 +178,7 @@
 @misc{IBGE10,
 	note = {\url{www.ibge.gov.br/}},
 	key = {IBGE},
-	title = {Perfis do Censo Demográfico. {V}isitado em {J}aneiro},
+	title = {{Perfis do Censo Demográfico}},
 	url = {www.ibge.gov.br/home/estatistica/populacao/censo2010/},
 	year = {2010}
 }
@@ -208,3 +233,4 @@
 	url = {http://www.voxforge.org/home/dev/acousticmodels/linux/create/htkjulius/tutorial}
 }
 
+%%% EOF %%%
