cassio: few edits

--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -72,7 +72,7 @@
 
 \title{
 	\vspace{40pt}
-	Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipamentos Eletrônicos
+	Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipamentos Eletrônicos via Luz Infravermelha
 	% Controle de Aparelhos Eletrônicos por Sistemas Embarcados com Suporte à Reconhecimento e Síntese de Voz
 	\vspace{25pt}
 }
@@ -107,7 +107,7 @@
 \vfill
 Belem -- Brazil\\
 \vspace{2pt}
-Abril/2015
+Maio/2015
 }
 
 \begin{document}
