--- a/tech_report/capa.tex
+++ b/tech_report/capa.tex
@@ -10,13 +10,13 @@ TELECOMUNICAÇÕES\\
 
 \vspace{120pt}
 {\Large
-Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipamentos Eletrônicos\\
+Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipamentos Eletrônicos via Luz Infravermelha\\
 %Controle de Aparelhos Eletrônicos por Sistemas Embarcados com Suporte à Reconhecimento e Síntese de Voz\\
 }
 
 \vfill
 \normalsize
 Belém -- Brazil\\
-Abril/2015
+Maio/2015
 \end{center}
 %%% EOF %%%
