Correção de erros sem padronização BBB

--- a/tech_report/capa.tex
+++ b/tech_report/capa.tex
@@ -16,7 +16,7 @@ Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipament
 
 \vfill
 \normalsize
-Belém -- Brazil\\
+Belém -- Brasil\\
 Maio/2015
 \end{center}
 %%% EOF %%%
