--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -99,13 +99,13 @@
 \vspace{100pt}
 \begin{table}[!h]
 	\begin{tabular*}{.9\linewidth}{p{.45\linewidth}p{.45\linewidth}}
-	& Projeto apresentado à disciplina Projetos de Harware e Interfaceamento 
+	& Projeto apresentado à disciplina Projetos de \textit{Hardware} e Interfaceamento 
 	como requisito de avaliação.
 	Professores: Jeferson Breno N. Leite e Adalbery Rodrigues Castro.
 	\end{tabular*}
 \end{table}
 \vfill
-Belem -- Brazil\\
+Belem -- Brasil\\
 \vspace{2pt}
 Maio/2015
 }
