--- a/tech_report/apendice.tex
+++ b/tech_report/apendice.tex
@@ -158,23 +158,23 @@ caption={função {\tt create\_db()}}, label={lst:dbphi5}]
 \label{app:arduino}
 \lstinputlisting[style=code, language=c, firstline=12, lastline=26,
 caption={Declarações globais}, label={lst:ard_1}]
-{codes/arduino_IR.c}
+{codes/arduino_IR.ino}
 
 \lstinputlisting[style=code, language=c, firstline=34, lastline=68,
 caption={Função {\tt loop()}}, label={lst:ard_2}]
-{codes/arduino_IR.c}
+{codes/arduino_IR.ino}
 
 \lstinputlisting[style=code, language=c, firstline=70, lastline=83,
 caption={Função {\tt printPulses()}}, label={lst:ard_3}]
-{codes/arduino_IR.c}
+{codes/arduino_IR.ino}
 
 \lstinputlisting[style=code, language=c, firstline=85, lastline=99,
 caption={Função {\tt pulseIR()}}, label={lst:ard_4}]
-{codes/arduino_IR.c}
+{codes/arduino_IR.ino}
 
 \lstinputlisting[style=code, language=c, firstline=101, lastline=108,
 caption={Função {\tt sendCommand()}}, label={lst:ard_5}]
-{codes/arduino_IR.c}
+{codes/arduino_IR.ino}
 \end{section}
 
 % Cassio -----------------------------------------------------------------------
