--- a/tech_report/capa.tex
+++ b/tech_report/capa.tex
@@ -17,6 +17,6 @@ Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipament
 \vfill
 \normalsize
 Belém -- Brasil\\
-Maio/2015
+Junho/2015
 \end{center}
 %%% EOF %%%
